--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@koush/wrtc": "^0.5.3",
     "@viamrobotics/sdk": "^0.46.1-b.0",
     "bluehawk": "^1.6.0",
     "hugo": "^0.0.3"
