--- a/.github/vale/styles/Viam/Time24hTimeZone.yml
+++ b/.github/vale/styles/Viam/Time24hTimeZone.yml
@@ -1,7 +1,7 @@
 extends: existence
 message: If you need to show a time zone ('%s'), use Coordinated Universal Time (UTC), and indicate the time-zone offset from UTC.
 link: 'https://github.com/rackerlabs/docs-style-guide/blob/master/style-guide/style/time.rst'
-level: error
+level: warning
 nonword: true
 tokens:
   - '(([0-2]\d(:[0-5]\d)+) (\(?[^U(][^T][^C])( ?(-\d+)?)?(\)?))'
