DOCS-4423: Build a machine (#4678)

--- a/netlify.toml
+++ b/netlify.toml
@@ -57,7 +57,7 @@
   [plugins.inputs]
 
   # change this key to a new one any time you need to restart from scratch
-  cacheKey = ["Sep312025"]
+  cacheKey = ["Oct032025"]
   # either "warn" or "error"
   failBuildOnError = true
 
