--- a/netlify.toml
+++ b/netlify.toml
@@ -57,7 +57,7 @@
   [plugins.inputs]
 
   # change this key to a new one any time you need to restart from scratch
-  cacheKey = ["Oct172025-2"]
+  cacheKey = ["Oct302025"]
   # either "warn" or "error"
   failBuildOnError = true
 
